# OtGfx

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
demos/: OtDemo.h  OtFilterDemo.h  OtFilters.h  OtGeneratorDemo.h  OtGenerators.h  OtSplashScreen.h  OtTriangle.h
examples/: neon.otn
gfx/: CMakeLists.txt
gfx/bindings/: OtCanvasModule.cpp
gfx/compositing/: OtCompositing.h
gfx/filters/: OtAddOver.h  OtAlphaOver.h  OtBlit.h  OtBlur.h  OtContrastSaturationBrightness.h  OtFilter.h  OtGaussian.h  OtIslandizer.h  OtNeedle.h  OtNormalMapper.h  OtPixelate.h  OtPosterize.h  OtRgbaAdjust.h  OtRgbaCurve.h  OtSeamlessTile.h  OtSharpen.h
gfx/framework/: OtFramework.cpp  OtFramework.h  OtFrameworkApp.h  OtGpu.cpp  OtGpu.h  OtImGui.cpp  OtMacos.mm  OtSDL.cpp
gfx/generators/: OtCheckerBoard.h  OtColorWheel.h  OtFbm.h  OtGenerator.h  OtTileableFbm.h
gfx/geo/: OtHeightMap.cpp  OtHeightMap.h  OtMap.cpp  OtMap.h
gfx/math/: OtCamera.h
gfx/model/: OtGrass.cpp  OtGrass.h  OtModel.cpp  OtModelMesh.cpp  OtModelMesh.h  OtModelTexture.cpp
gfx/primitives/: OtCubePrimitive.cpp
gfx/renderers/: OtCanvas.cpp  OtCanvas.h  OtMarkdown.cpp  OtMeshPreview.cpp  OtMeshPreview.h  OtOscilloscope.cpp  OtOscilloscope.h
gfx/resources/: OtBlitPass.h  OtCascadedShadowMap.cpp  OtCascadedShadowMap.h  OtCommandBuffer.h  OtComputePass.cpp  OtComputePass.h  OtComputePipeline.cpp  OtComputePipeline.h  OtCubeMap.cpp  OtCubeMap.h  OtFrameBuffer.cpp  OtFrameBuffer.h  OtGbuffer.cpp  OtGbuffer.h  OtGraphicsDevice.h  OtGraphicsPipeline.h  OtGraphicsShader.cpp  OtGraphicsShader.h  OtImage.cpp  OtImage.h  OtIndexBuffer.cpp  OtIndexBuffer.h  OtInstanceDataBuffer.cpp  OtInstanceDataBuffer.h  OtInstances.cpp  OtInstances.h  OtMesh.cpp  OtMesh.h  OtReadBackBuffer.cpp  OtReadBackBuffer.h  OtRenderPass.cpp  OtRenderPass.h  OtRenderPipeline.cpp  OtRenderPipeline.h  OtRenderShader.cpp  OtRenderShader.h  OtRenderTarget.h  OtSampler.cpp  OtSampler.h  OtShape.cpp  (+5 more)
gui/widgets/: OtCanvasStack.cpp  OtCanvasStack.h  OtDial.cpp  OtVectorDisplay.cpp  OtVectorDisplay.h
ide/: CMakeLists.txt
ide/core/: OtWorkspace.cpp
ide/scene/: OtSceneEditor.cpp  OtSceneEditorCamera.cpp
language/collections/: OtArray.h
language/utility/: OtLibuv.h
nodes/geometry/: OtGeometryTransformNode.cpp  OtTerrainBuilderNode.cpp
nodes/input/: OtBooleanInputNode.cpp  OtColorInputNode.cpp  OtFloatInputNode.cpp  OtIntegerInputNode.cpp  OtStringInputNode.cpp  OtVector2InputNode.cpp  OtVector3InputNode.cpp  OtVector4InputNode.cpp
nodes/map/: OtMapToHeightMapNode.cpp  OtMapToImageNode.cpp
nodes/math/: OtBinaryFloatNode.cpp  OtCompareFloatNode.cpp  OtUnaryFloatNode.cpp
nodes/probe/: OtFloatProbeNode.cpp  OtGeometryProbeNode.cpp  OtManifoldProbeNode.cpp
nodes/shape/: OtShapeGeneratorNode.cpp  OtShapeTransformNode.cpp
nodes/texture/: OtAlphaOverNode.cpp  OtCanvasGeneratorNode.cpp  OtCheckerBoardGeneratorNode.cpp  OtColorWheelGeneratorNode.cpp  OtCompositeTexturesNode.cpp  OtContrastSaturationBrightnessNode.cpp  OtGaussianBlurNode.cpp  OtHeightmapToNormalMapNode.cpp  OtIslandizerNode.cpp  OtNoiseMapGeneratorNode.cpp  OtPixelateNode.cpp  OtPosterizeNode.cpp  OtRbgaCurvesNode.cpp  OtRgbaFilterNode.cpp  OtSeamlessTilerNode.cpp  OtSharpenNode.cpp  OtTextureFilterNode.h  OtTextureGeneratorNode.h  OtTextureToImageNode.cpp
scene/components/: OtGrassComponent.cpp  OtPostProcessingComponent.cpp
scene/renderer/: OtBackgroundPass.cpp  OtBackgroundPass.h  OtBloomUpSample.h  OtDeferredPass.cpp  OtDeferredPass.h  OtForwardPass.cpp  OtForwardPass.h  OtImageBasedLighting.cpp  OtImageBasedLighting.h  OtPostProcessingPass.cpp  OtPostProcessingPass.h  OtSceneRenderEntitiesPass.cpp  OtSceneRenderEntitiesPass.h  OtSceneRenderer.cpp  OtSceneRenderer.h  OtSceneRendererContext.cpp  OtSceneRendererContext.h  OtSceneRendererDebug.cpp  OtSceneRendererDebug.h  OtShadowPass.cpp  OtShadowPass.h
scene/terrain/: OtTerrain.cpp  OtTerrainHeights.cpp
shaders/: CMakeLists.txt  bindings.txt
(+57 files in other folders)
